# me597-tgobel

ros2_ws/12/log/: latest_build
ros2_ws/12/task_3/: metadata.yaml  package.xml  task_3_0.db3
ros2_ws/12/task_3/task_3/: pid_controller.py
ros2_ws/Lab1_ws/bag_files/task_1/: metadata.yaml  rosbag2_2025_01_23-12_21_05_0.db3  task_1_0.db3
ros2_ws/Lab1_ws/bag_files/task_2/: metadata.yaml  task_2_0.db3
ros2_ws/Lab1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/Lab1_ws/install/task_1/lib/task_1/: talker
ros2_ws/Lab1_ws/install/task_1/share/task_1/: package.sh
ros2_ws/Lab1_ws/install/task_1/share/task_1/launch/: pub_sub_launch.py
ros2_ws/Lab1_ws/install/task_2/lib/task_2/: client  listener  service  talker
ros2_ws/Lab1_ws/install/task_2/share/task_2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/Lab1_ws/install/task_2_interfaces/share/task_2_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/Lab1_ws/install/task_2_interfaces/share/task_2_interfaces/cmake/: export_task_2_interfaces__rosidl_generator_cExport.cmake  export_task_2_interfaces__rosidl_generator_cppExport.cmake  export_task_2_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_task_2_interfaces__rosidl_generator_pyExport.cmake  export_task_2_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  task_2_interfaces__rosidl_typesupport_cExport.cmake  task_2_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  task_2_interfaces__rosidl_typesupport_cppExport.cmake  (+2 more)
ros2_ws/Lab1_ws/log/: latest_build
ros2_ws/Lab1_ws/task_1/: package.xml  setup.py
ros2_ws/Lab1_ws/task_1/install/: local_setup.sh  setup.sh
ros2_ws/Lab1_ws/task_1/launch/: pub_sub_launch.py
ros2_ws/Lab1_ws/task_1/launch/install/: local_setup.sh  setup.sh
ros2_ws/Lab1_ws/task_1/launch/log/: latest_build
ros2_ws/Lab1_ws/task_1/log/: latest_build
ros2_ws/Lab1_ws/task_1/task_1/: my_first_subscriber  my_first_topic  my_first_topic.py
ros2_ws/Lab1_ws/task_2/: package.xml  setup.py
ros2_ws/Lab1_ws/task_2/launch/: service_launch.py
ros2_ws/Lab1_ws/task_2/task_2/: client_function.py
ros2_ws/Lab1_ws/task_2/task_2/task_2/launch/: service_launch.py
ros2_ws/Lab1_ws/task_2_interfaces/: CMakeLists.txt
ros2_ws/Lab2_ws/bag_files/task_3/: metadata.yaml  task_3_0.db3
ros2_ws/Lab2_ws/install/: local_setup.sh  setup.sh
ros2_ws/Lab2_ws/install/task_3/lib/task_3/: pid_speed_controller
ros2_ws/Lab2_ws/install/task_3/share/task_3/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/Lab2_ws/log/: latest_build
ros2_ws/Lab2_ws/task_3/: package.xml  setup.py
ros2_ws/Lab2_ws/task_3/task_3/: pid_controller.py
ros2_ws/Lab3_ws/: =1.21  =1.3.0
ros2_ws/Lab3_ws/bag_files/rosbag2_2025_03_25-20_41_16/: metadata.yaml  rosbag2_2025_03_25-20_41_16_0.db3
ros2_ws/Lab3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/Lab3_ws/install/task_4/lib/task_4/: auto_navigator  gen_sync_map_launch
ros2_ws/Lab3_ws/install/task_4/share/task_4/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/Lab3_ws/install/task_4/share/task_4/launch/: gen_sync_map_launch.py
ros2_ws/Lab3_ws/log/: latest_build
ros2_ws/Lab3_ws/task_4/: auto_navigator.py  setup.py
ros2_ws/Lab3_ws/task_4/launch/: gen_sync_map.launch.py  turtlebot4_navigator.launch.py
ros2_ws/Lab3_ws/task_4/maps/: classroom_map.pgm  classroom_map.yaml  sync_classroom_map.pgm  sync_classroom_map.yaml
ros2_ws/Lab3_ws/task_4/rviz/: robot.rviz  view_robot.launch.py
ros2_ws/Lab3_ws/task_4/task_4/: auto_navigator.py  original try.py
ros2_ws/Lab4_ws/install/: local_setup.sh  setup.sh
ros2_ws/Lab4_ws/install/task_5/lib/task_5/: image_publisher  object_detector
ros2_ws/Lab4_ws/install/task_5/share/task_5/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/Lab4_ws/install/task_5/share/task_5/launch/: object_detector_launch.py
ros2_ws/Lab4_ws/launch/: object_detector_launch.py
ros2_ws/Lab4_ws/log/: latest_build
ros2_ws/Lab4_ws/task_5/: setup.py
ros2_ws/Lab4_ws/task_5/resource/: output.avi
ros2_ws/Lab4_ws/task_5/task_5/: object_detector.py
(+34 files in other folders)
