<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_4</name>
  <version>0.0.0</version>
  <description>Launches turtlebot4 navigation and mapping nodes</description>
  <maintainer email="talon.gobel@gmail.com">me597</maintainer>
  <license>Apache 2.0</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>turtlebot4_rviz</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
